<resources>
    <string name="app_name">Spin-Off</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Fragments -->
    <string name="fragment_search_medias">Search Media</string>
    <string name="fragment_single_movie">Single Movie</string>
    <string name="fragment_single_serie">Single Serie</string>

    <string name="fragment_season">Season</string>
    <string name="fragment_artist">Artist</string>
    <string name="fragment_episode">Episode</string>

    <string name="action_settings">Settings</string>
    <string name="emptyField">-</string>
    <string name="copyright">2018 - Lucas AMIAUD</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="no_results">Nothing to show. Check your internet connection.</string>

    <!-- POSTER URLS -->
    <string name="poster">poster</string>
    <string name="base_url_poster_185">https://image.tmdb.org/t/p/w185</string>
    <string name="base_url_poster_300">https://image.tmdb.org/t/p/w300</string>
    <string name="base_url_poster_780">https://image.tmdb.org/t/p/w780</string>
    <string name="base_url_poster_500">https://image.tmdb.org/t/p/w500</string>
    <string name="base_url_poster_original">https://image.tmdb.org/t/p/original</string>

    <!-- MENU ITEMS -->
    <string name="menu_popular">Popular</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_on_air">Current</string>
    <string name="menu_movie">Movies</string>
    <string name="menu_series">Series</string>
    <string name="menu_artists">Persons</string>
    <string name="menu_my_space">Personal space</string>
    <string name="menu_calendar">My Calendar</string>

    <!-- YOUTUBE -->

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


    <string name="details_overview">Overview</string>
    <string name="imdb_rating">iMDB Rating</string>
    <string name="language">Language</string>
    <string name="runtime">Runtime</string>
    <string name="release_date">Release date</string>
    <string name="search">Search</string>
    <string name="txt_search">Type your search here …</string>
    <string name="search_title">Search</string>
    <string name="title_activity_serie">SerieActivity</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="tv_show">The TV Show</string>
    <string name="tv_season">The TV Season</string>
    <string name="tv_episode">The TV Episode</string>
    <string name="number_seasons">Seasons (%s)</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_library">My list</string>
    <string name="movie">The movie</string>

    <string name="empty_results">Nothing to show</string>
    <string name="empty_desc_results">There\'s no medias to display ! \n Check your network connexion.</string>
    <string name="search_for">Search for movies, TV shows ..</string>

    <string name="details_budget">Budget</string>
    <string name="text_season">Season</string>
    <string name="number_of_episodes">Episodes count</string>
    <string name="air_date">Air date</string>
    <string name="producer_text">Producer</string>
    <string name="realisators_text">Realisators</string>
    <string name="text_networks">Networks</string>
    <string name="genres_text">Genres</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_library">Library</string>

    <!-- Library -->
    <string name="library_movies">My movies</string>
    <string name="library_series">My series</string>
    <string name="library_media_watchlist_number">Watchlist</string>
    <string name="library_media_seen_number">Seen</string>
    <string name="library_media_runtime">Seen runtime</string>
    <string name="library_to_see">Watchlist</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starring_text">Starring</string>
    <string name="season_text">Season</string>
    <string name="episodes_text">Episodes</string>
    <string name="name_text">Name:</string>
    <string name="episode_number_text">Episode n°:</string>
    <string name="air_date_text">Air date</string>
    <string name="title_activity_episode">EpisodeActivity</string>
    <string name="cast_text">Cast</string>
    <string name="episode_text">Episode</string>
    <string name="guests_text">Guests</string>
    <string name="biography_text">Biography</string>
    <string name="birthday_text">Born</string>
    <string name="see_more_text">See more</string>
    <string name="see_all">See all</string>
    <string name="see_all_stats">See all stats</string>
    <string name="stats_movie_title">Movie Statistics</string>
    <string name="stats_movies_watched">Movies watched</string>
    <string name="stats_average_year_label">Avg. release year</string>
    <string name="stats_serie_title">Series Statistics</string>
    <string name="stats_total_runtime">Total runtime: %s</string>
    <string name="stats_average_year">Average release year: %d</string>
    <string name="stats_average_first_air_year">Average first air year: %d</string>
    <string name="stats_total_seasons">Total seasons watched: %d</string>
    <string name="stats_total_episodes">Total episodes watched: %d</string>
    <string name="stats_total_runtime_label">Total watch time</string>
    <string name="stats_hours_unit">HOURS</string>
    <string name="stats_days_equivalent">Equivalent to %s of non-stop cinema.</string>
    <string name="stats_episodes_watched">Episodes watched</string>
    <string name="stats_series_watched">Series watched</string>
    <string name="stats_genres_preferred">Preferred Genres</string>
    <string name="stats_prediction_title">Weekend Prediction</string>
    <string name="stats_prediction_desc">Based on your habits, we suggest you start a new show. Your estimated free time is 4h this Sunday.</string>
    <string name="stats_explore">Explore</string>
    <string name="stats_top_genre">Top Genre</string>
    <string name="stats_top_genre_combination">Top Combination</string>
    <string name="stats_years_distribution">Years Distribution</string>
    <string name="stats_top_year">Top Year</string>
    <string name="stats_top_years">Top 3 Years</string>
    <string name="previous_text">Previous</string>
    <string name="next_text">Next</string>
    <string name="number_of_series_txt">Number of Series</string>
    <string name="library_summary_txt">Library Summary</string>
    <string name="number_of_movies_txt">Number of Movies</string>
    <string name="teaser_txt">Teaser</string>
    <string name="recommendations_text">Recommendations</string>
    <string name="next_episode">Next Episode !</string>

    <string name="context_menu_add">Add to library</string>
    <string name="context_menu_delete">Delete from library</string>
    <string name="movie_added">Movie added to your library</string>
    <string name="movie_deleted">Movie deleted from library</string>
    <string name="serie_added">Serie added to your library</string>
    <string name="serie_deleted">Serie deleted from library</string>
    <string name="undo_action">Undo</string>
    <string name="error_library_transaction">A problem occurred. Try again or reach an administrator.</string>

    <string name="chip_in_library">In watchlist</string>
    <string name="chip_watched">Watched</string>
</resources>
