<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_discover">
            <menu>
            <item
                android:id="@+id/nav_movies"
                android:icon="@drawable/ic_movie"
                android:title="@string/menu_movie" />
                <item
                    android:id="@+id/nav_series"
                    android:icon="@drawable/ic_tv"
                    android:title="@string/menu_series" />
            </menu>
        </item>
    </group>

    <item android:title="@string/menu_my_space">
        <menu>
            <item
                android:id="@+id/nav_library"
                android:icon="@drawable/ic_library"
                android:title="@string/menu_library" />
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar"
                android:title="@string/menu_calendar" />
        </menu>
    </item>

</menu>
