<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.eseo.dis.amiaudluc.spinoffapp.ui.movies.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            card_view:cardBackgroundColor="@color/card_background_color"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="8dp"
            card_view:layout_collapseMode="pin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lil_caracteritics"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <RelativeLayout
                    android:id="@+id/air_date_container"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="70dp"
                    app:layout_constraintBottom_toBottomOf="@id/lil_caracteritics"
                    app:layout_constraintEnd_toStartOf="@id/season_container"
                    app:layout_constraintStart_toStartOf="@id/lil_caracteritics"
                    app:layout_constraintTop_toTopOf="@id/lil_caracteritics">

                    <TextView
                        android:id="@+id/text_air_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/air_date_text"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/air_date"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="15sp"
                        android:layout_below="@id/text_air_date"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:contentDescription="@string/air_date" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/season_container"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="70dp"
                    app:layout_constraintBottom_toBottomOf="@id/lil_caracteritics"
                    app:layout_constraintEnd_toStartOf="@id/episodes_container"
                    app:layout_constraintStart_toEndOf="@id/air_date_container"
                    app:layout_constraintTop_toTopOf="@id/lil_caracteritics">

                    <TextView
                        android:id="@+id/text_season"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/season_text"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/number_of_season"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:layout_below="@id/text_season"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:contentDescription="@string/number_seasons" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/episodes_container"
                    android:layout_width="0dp"
                    app:layout_constraintHorizontal_weight="1"
                    android:layout_height="70dp"
                    app:layout_constraintBottom_toBottomOf="@id/lil_caracteritics"
                    app:layout_constraintEnd_toEndOf="@id/lil_caracteritics"
                    app:layout_constraintStart_toEndOf="@id/season_container"
                    app:layout_constraintTop_toTopOf="@id/lil_caracteritics">

                    <TextView
                        android:id="@+id/episodes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/episodes_text"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/episodes"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_below="@id/episodes_text"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:contentDescription="@string/episode_text" />

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/season_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginVertical="@dimen/text_margin"
            android:gravity="start"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/tv_season"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            card_view:cardBackgroundColor="@color/card_background_color"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="8dp"
            card_view:layout_collapseMode="pin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_guest_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/cast_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/colorPrimary" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/guest_stars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:overScrollMode="never"
                    android:scrollbars="none">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/text_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/details_overview"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="?android:attr/textColorPrimary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_episodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginVertical="@dimen/text_margin"
            android:gravity="start"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/episodes_text"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/episodes_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

