<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_semi_opaq"
    tools:context="fr.eseo.dis.amiaudluc.spinoffapp.library.DashboardFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_summary_txt"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_nb_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_series_txt"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/nb_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_series_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Series Length"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/series_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/text_nb_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_movies_txt"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/nb_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_movies_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Movies Length"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/movies_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</FrameLayout>
